--- a/package.json
+++ b/package.json
@@ -144,6 +144,7 @@
     "hrml-loader",
     "html-webpack-plugin",
     "listr",
+    "style-loader",
     "webpack",
     "webpack-dev-middleware",
     "webpack-hot-middleware",
