Add all loaders to build deps

--- a/package.json
+++ b/package.json
@@ -139,11 +139,14 @@
   },
   "buildDependencies": [
     "copy-webpack-plugin",
+    "css-loader",
     "extract-text-webpack-plugin",
     "file-loader",
     "hrml-loader",
     "html-webpack-plugin",
     "listr",
+    "null-loader",
+    "postcss-loader",
     "style-loader",
     "webpack",
     "webpack-dev-middleware",
