All dev deps are build deps

--- a/package.json
+++ b/package.json
@@ -137,17 +137,64 @@
     "webpack-hot-middleware": "2.19.1",
     "webpack-merge": "4.1.0"
   },
-  "buildDependencies": [
+  "buildDependencies",
+    "autoprefixer",
+    "babel-core",
+    "babel-eslint",
+    "babel-loader",
+    "babel-plugin-istanbul",
+    "babel-plugin-module-resolver",
+    "babel-plugin-rewire",
+    "babel-preset-es2015",
+    "babel-preset-react",
+    "babel-preset-stage-0",
+    "babel-register",
+    "chai",
+    "chai-subset",
+    "chalk",
+    "clean-css",
     "copy-webpack-plugin",
+    "coveralls",
     "css-loader",
+    "cssnano",
+    "derequire",
+    "eslint",
+    "eslint-config-airbnb",
+    "eslint-import-resolver-babel-module",
+    "eslint-import-resolver-webpack",
+    "eslint-plugin-import",
+    "eslint-plugin-jsx-a11y",
+    "eslint-plugin-react",
+    "exorcist",
     "extract-text-webpack-plugin",
     "file-loader",
-    "hrml-loader",
+    "html-loader",
     "html-webpack-plugin",
+    "import-glob-loader",
+    "inline-source-cli",
+    "istanbul",
+    "json-loader",
+    "less",
+    "less-loader",
     "listr",
+    "mocha",
+    "mocha-lcov-reporter",
+    "normalize.css",
     "null-loader",
+    "nyc",
+    "onchange",
     "postcss-loader",
+    "proxyquire",
+    "redux-mock-store",
+    "rimraf",
+    "shared-git-hooks",
+    "sinon",
     "style-loader",
+    "stylelint",
+    "stylelint-config-standard",
+    "stylelint-no-browser-hacks",
+    "stylelint-order",
+    "watchify",
     "webpack",
     "webpack-dev-middleware",
     "webpack-hot-middleware",
