Add react/redux to build deps

--- a/package.json
+++ b/package.json
@@ -186,6 +186,23 @@
     "onchange",
     "postcss-loader",
     "proxyquire",
+    "react",
+    "react-addons-shallow-compare",
+    "react-blockies",
+    "react-dates",
+    "react-datetime",
+    "react-dom",
+    "react-helmet",
+    "react-highcharts",
+    "react-hot-loader",
+    "react-modal-dialog",
+    "react-redux",
+    "react-router-dom",
+    "react-tooltip",
+    "react-transition-group",
+    "redux",
+    "redux-thunk",
+    "redux-undo",
     "redux-mock-store",
     "rimraf",
     "shared-git-hooks",
