--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   "dependencies": {
     "async": "2.4.1",
     "augur.js": "4.4.11",
+    "babel-loader": "7.1.0",
+    "babel-preset-react": "6.24.1",
     "bignumber.js": "4.0.2",
     "bs58": "4.0.1",
     "classnames": "2.2.5",
