--- a/support/nginx-default.conf
+++ b/support/nginx-default.conf
@@ -1,12 +1,21 @@
 
+map $http_x_forwarded_proto $fe_https {
+  default off;
+  https on;
+}
+
 server {
 	listen 80 default_server;
+
+  if ($fe_https = 'off') {
+    return 302 https://$host$request_uri;
+  }
 
   gzip on;
   gzip_vary on;
   gzip_min_length 10240;
   gzip_proxied expired no-cache no-store private auth;
-  gzip_types text/plain text/css text/xml text/html text/javascript application/x-javascript application/xml;
+  gzip_types text/plain text/css text/xml text/html text/javascript application/javascript application/x-javascript application/xml image/svg+xml;
   gzip_disable "MSIE [1-6]\.";
 
 	location / {
@@ -17,11 +26,15 @@ server {
 server {
 	listen 8001;
 
+  if ($fe_https = 'off') {
+    return 302 https://$host$request_uri;
+  }
+
   gzip on;
   gzip_vary on;
   gzip_min_length 10240;
   gzip_proxied expired no-cache no-store private auth;
-  gzip_types text/plain text/css text/xml text/html text/javascript application/x-javascript application/xml;
+  gzip_types text/plain text/css text/xml text/html text/javascript application/javascript application/x-javascript application/xml image/svg+xml;
   gzip_disable "MSIE [1-6]\.";
 
   location / {
