--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "start": "node server.js",
     "__": "",
     "lint": "node scripts/lint.js",
+    "format": "prettier --write src/**/*.{js,jsx}",
     "lit": "echo 'so lit'",
     "test": "node scripts/test.js",
     "kickoff": "./scripts/setup-local-dev.sh",
@@ -137,6 +138,7 @@
     "nyc": "11.0.2",
     "onchange": "3.2.1",
     "postcss-loader": "2.0.9",
+    "prettier": "1.12.0",
     "proxyquire": "1.8.0",
     "redux-mock-store": "1.3.0",
     "rimraf": "2.6.2",
