--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-dom": "16.2.0",
     "react-faux-dom": "4.1.0",
     "react-helmet": "5.2.0",
+    "react-numeric-input": "^2.2.3",
     "react-redux": "5.0.6",
     "react-router-dom": "4.2.2",
     "react-textfit": "1.1.0",
